local-sample/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: hs-ui
spec:
  selector:
    app: my-horizon-stream-ui
  ports:
  # Default port used by the image
  - port: 3000
