local-sample/to-be-added-to-operator.yaml

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    run: api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: gateway-http
  selector:
    run: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: mail-server
  labels:
    run: horizon-mail-server
spec:
  type: ClusterIP
  ports:
    - port: 8025
      protocol: TCP
      name: http
    - port: 1025
      protocol: TCP
      name: smtp
  selector:
    run: horizon-mail-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon-mail-server
spec:
  selector:
    matchLabels:
      run: horizon-mail-server
  template:
    metadata:
      labels:
        run: horizon-mail-server
    spec:
      containers:
        - name: mail-server
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 8025
            - containerPort: 1025
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      run: api-gateway
  template:
    metadata:
      labels:
        run: api-gateway
    spec:
      volumes:
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf-template
      containers:
        - name: api-gateway
          image: nginx:1.21.6-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf-volume
              mountPath: "/etc/nginx/templates/default.conf.template"
              subPath: "default.conf.template"
