local-sample/grafana-e-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: onmshs
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port:
              number: 3000
  tls:
  - hosts:
    - onmshs
    secretName: local-dev-tls-secret
