local-sample/ingress.TEMPLATE.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hs-ui
spec:
  ingressClassName: nginx
  rules:
  - host: [[LOCALHOSTUI]]
    http:
      paths:
      - path: /ui
        pathType: ImplementationSpecific
        backend:
          service:
            name: hs-ui
            port:
              number: 3000
  tls:
  - hosts:
    - [[LOCALHOSTUI]]
    secretName: local-dev-tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hs-karaf
spec:
  ingressClassName: nginx
  rules:
  - host: [[LOCALHOSTKARAF]]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-stream-core
            port:
              number: 8101
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hs-core
spec:
  ingressClassName: nginx
  rules:
  - host: [[LOCALHOSTCORE]]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-stream-core
            port:
              number: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hs-api
spec:
  ingressClassName: nginx
  rules:
  - host: [[LOCALHOSTAPI]]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horizon-stream-api
            port:
              number: 9090
