local-sample/ingress.keycloak.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-keycloak
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: localhostkey
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: example-keycloak-discovery
#            port:
#              number: 7800
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  generation: 1
  labels:
    app: keycloak
  name: keycloak-ingress
  namespace: my-keycloak-operator
spec:
  tls:
  - hosts:
      - localhost
    secretName: example-tls-secret
  ingressClassName: nginx
  defaultBackend:
    service:
      name: localhost
      port:
        number: 443
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: localhost
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
